--- a/index.html
+++ b/index.html
@@ -85,25 +85,30 @@
 
   <section class="is-content has-stickies stacked">
     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-    <p class="is-sticky" data-sticky='{"bottoming":false,"id":"x"}'>5 data{ bottoming:false, id:x } - Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+    <div class="is-sticky" data-sticky='{"bottoming":false,"id":"x"}'><p>5 data{ bottoming:false, id:x } - Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p></div>
     <p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p>
   </section>
 
   <section class="is-content has-stickies stacked">
     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-    <p class="is-sticky">6 - Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
+    <div class="is-sticky"><p>6 - Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p></div>
     <p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p>
   </section>
 
   <section class="is-content has-stickies three column row">
     <div class="cell">
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p>Aenean ultricies mi vitae est.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p class="is-sticky">7 - Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
+      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p>Aenean ultricies mi vitae est.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p>
+      <div class="is-sticky"><p>7 - Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p></div>
+      <p>Donec non enim in turpis pulvinar facilisis.</p>
+      <p>Ut felis.</p>
     </div>
     <div class="cell">
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p class="is-sticky">8 - Aenean ultricies mi vitae est.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p>Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
+      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p>
+      <div class="is-sticky"><p>8 - Aenean ultricies mi vitae est.</p></div>
+      <p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p>Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
     </div>
-    <div class="cell">
-      <p class="is-sticky">9 - Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p>Aenean ultricies mi vitae est.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p>Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
+    <div class="cell is-sticky">
+      <p>9 - Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p>Aenean ultricies mi vitae est.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p>Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
     </div>
   </section>
   <section class="three column row">
@@ -117,8 +122,8 @@
       <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p><p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p>Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
       <p>Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.</p><p>Donec eu libero sit amet quam egestas semper.</p><p>Aenean ultricies mi vitae est.</p><p>Mauris placerat eleifend leo.</p><p>Quisque sit amet est et sapien ullamcorper pharetra.</p><p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p><p>Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.</p><p>Donec non enim in turpis pulvinar facilisis.</p><p>Ut felis.</p>
     </div>
-    <div class="cell">
-      <ol class="is-sticky" data-sticky='{"parent":".three.column.row", "carry":true}'>
+    <div class="cell is-sticky" data-sticky='{"parent":".three.column.row", "carry":true}'>
+      <ol>
         <li>data{ parent:.thre.column.row , carry:true }</li>
         <li>Sed eget mi eu nisl mattis varius in non lectus.</li>
         <li>Suspendisse non mauris a ligula sollicitudin eleifend efficitur non dolor.</li>
@@ -161,8 +166,8 @@
         <li>Ut varius massa eu lectus sollicitudin condimentum.</li>
       </ol>
     </div>
-    <div class="cell">
-      <ol class="is-sticky is-sticky--carry" data-sticky='{"parent":".three.column.row"}'>
+    <div class="cell" class="is-sticky is-sticky--carry" data-sticky='{"parent":".three.column.row"}'>
+      <ol>
         <li>.is-sticky--carry data{ parent:.thre.column.row }</li>
         <li>Donec placerat velit a ligula accumsan lacinia.</li>
         <li>Sed posuere turpis in purus rhoncus maximus.</li>
